Prevent redirect on drop event; don't overlap project board with nav bar

--- a/app/styles/components/projects-board.scss
+++ b/app/styles/components/projects-board.scss
@@ -31,7 +31,7 @@
 
 @media (min-width: 768px) {
   .projects-board {
-    left: 0.5vh;
+    left: 122px;
     right: 0.5vh;
   }
 }
